src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedResourceValue1/InvalidUnexpectedResourceValue1.php
<?php

namespace Invalid\UnexpectedResourceValue1;

use Claroline\CoreBundle\Library\PluginBundle;

/**
 * Invalid because there's an unexpected value in its resource definition
 */
class InvalidUnexpectedResourceValue1 extends PluginBundle
{
}